Fix audio log call ordering.

This fixes a race where the web contents title for an
AudioOutputController could be missing in media-internals.

BUG=735037

Change-Id: I40a50a360515e48287904dd0086551a3d230e2c5
Reviewed-on: https://chromium-review.googlesource.com/541364
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480889}
Former-commit-id: 44de8ed5eb297e06f066ddcf903d3e22ca8fc243