content/browser/renderer_host/media/renderer_audio_output_stream_factory_context_impl.cc
@@ -79,6 +79,7 @@ RendererAudioOutputStreamFactoryContextImpl::CreateDelegate(
   MediaInternals* const media_internals = MediaInternals::GetInstance();
   std::unique_ptr<media::AudioLog> audio_log = media_internals->CreateAudioLog(
       media::AudioLogFactory::AUDIO_OUTPUT_CONTROLLER);
+  audio_log->OnCreated(stream_id, params, unique_device_id);
   media_internals->SetWebContentsTitleForAudioLogEntry(
       stream_id, render_process_id_, render_frame_id, audio_log.get());
 
